# titanic

./: .gitignore  1. first_iteration.ipynb  config.py  eda.ipynb  houseprices_eda.ipynb  houseprices_main.ipynb  linear.py  main.py  main_notebook.ipynb  main_regression.py  notebook_eda.ipynb  notebook_main.ipynb  notebook_openfe.ipynb  notebook_timeline.ipynb  preprocessing.py  pyproject.toml  readme.md  requirements.txt  timeline.ipynb  titanic_eda.ipynb  titanic_main.ipynb  titanic_openfe.ipynb  utils.py
data/: test_openfe.csv  train_openfe.csv
data/house_prices/: test_transformed.csv  train_with_log_target.csv
iterations/: 1. first.ipynb  2. second.ipynb
iterations/pipeline/: feature_preprocessing.py
pipeline/: feature_preprocessing.py
reports/: timeline.ipynb
src/ml_pipeline/: __init__.py  config.py  dnn.py  linear.py  models.py  pipeline.py  preprocessing.py  registry.py  utils.py
src/ml_pipeline/base/: base_preprocessors.py  pipeline.py  utils.py
src/ml_pipeline/classification/: config.py  dnn.py  models.py  pipeline.py  preprocessing.py  titanic_preprocessing.py
src/ml_pipeline/core/: pipeline.py  preprocessing.py  utils.py
src/ml_pipeline/regression/: config.py  houseprices_dnn.py  models.py  pipeline.py  preprocessing.py
