[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_pipeline"
version = "0.1"
dependencies = [
    "scikit-learn>=1.8",
    "pandas>=3.0",
    "numpy>=2.4",
    "omegaconf>=2.3",
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0"
]

[project.optional-dependencies]
dev = ["jupyter", "matplotlib", "seaborn"]

[tool.setuptools.packages.find]
where = ["src"]

